--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -24,12 +24,23 @@ ul {
   padding-right: 20px;
   color: #ffffff;
 }
+.button_9 {
+  height: 38px;
+  background: #e8491d;
+  border: none;
+  color: #ffffff;
+  margin-top: 10px;
+  padding: 10px;
+  margin-left: 2px;
+  width: 90px;
+}
 .dark {
   padding: 15px;
   background: #35424a;
   color: #ffffff;
   margin-top: 10px;
   margin-bottom: 10px;
+  margin-right: 20px;
 }
 /*header*/
 
@@ -68,6 +79,12 @@ header .current a {
 header a:hover {
   color: #cccccc;
   font-weight: bold;
+}
+/*showcase*/
+.contact input[type='number']{
+  padding: 4px;
+  height: 25px;
+  width: 250px;
 }
 /*showcase*/
 
